# eleet-screensaver

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  debug_configure.in
doc/: Makefile.in  README  README.compiling  README.xscreensaver
src/: Makefile.am  Makefile.in  eleet.c  eleet.h  eleet_fonts.c  eleet_random.c  eleet_textures.c  eleet_timers.c
src/fonts/: Makefile.am  Makefile.in
src/gnome/: Makefile.am  Makefile.in  eleet.desktop
src/kde/: Makefile.am  Makefile.in  eleet.desktop
src/models/: Makefile.in  misc_asteroid.c  misc_boulder.c  misc_cargo.c  misc_missile.c  ship_adder.c  ship_anaconda.c  ship_anaconda_arc.c  ship_asp.c  ship_aspmk2.c  ship_boa.c  ship_boamk2.c  ship_bushmaster.c  ship_caiman.c  ship_cobrafs.c  ship_cobramk1.c  ship_cobramk1_arc.c  ship_cobramk3_arc.c  ship_constrictor.c  ship_constrictor_arc.c  ship_coriolis.c  ship_coriolis_arc.c  ship_delta.c  ship_dodec.c  ship_drake.c  ship_escapepod.c  ship_ferdelance.c  ship_ferdelance_arc.c  ship_gecko.c  ship_gecko_arc.c  ship_gnat.c  ship_griffin.c  ship_hawk.c  ship_hognose.c  ship_krait.c  ship_mamba.c  ship_mamba_arc.c  ship_moccasin.c  ship_moray.c  ship_moray_arc.c  (+14 more)
src/textures/: Makefile.am  Makefile.in
xscreensaver/: eleet.conf  eleet.xml
